[project]
name = "enterprise-ai-qa-agent-server"
version = "0.1.0"
description = "FastAPI + LangGraph scaffold for an enterprise AI QA agent platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "langgraph>=0.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "python-arango>=8.1.0",
  "pymysql>=1.1.1",
  "minio>=7.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
